client listing and details added

--- a/frontEnd/carrentfrontend/public/index.html
+++ b/frontEnd/carrentfrontend/public/index.html
@@ -25,6 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      body {
+        background: #c850c0;
+        background: -webkit-linear-gradient(45deg, #36304a, #c6cdcf);
+        background: -o-linear-gradient(45deg, #36304a, #c6cdcf);
+        background: -moz-linear-gradient(45deg, #36304a, #c6cdcf);
+        background: linear-gradient(45deg, #36304a, #c6cdcf);
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
